--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-Server/node_modules
+backend/node_modules
+frontend/node_modules
 dist
 dist-ssr
 *.local
