--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.1",
+    "express-session": "^1.18.1",
     "morgan": "^1.10.0",
     "querystring": "^0.2.1",
     "uuid": "^11.0.3",
