--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bottleneck": "^2.19.5",
+    "connect-redis": "^8.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
@@ -20,6 +21,7 @@
     "express-session": "^1.18.1",
     "morgan": "^1.10.0",
     "querystring": "^0.2.1",
+    "redis": "^4.7.0",
     "uuid": "^11.0.3",
     "winston": "^3.17.0"
   }
