--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "framer-motion": "^10.16.5",
     "qs": "^6.13.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
