--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "build-install": "npm i && npm run build"
+    "build-install": "npm i --include=dev && npm run build"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.2.4",
