--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,11 @@
     "@emotion/styled": "^11.11.0",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "framer-motion": "^10.16.5",
+    "framer-motion": "^10.18.0",
     "qs": "^6.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
