--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,3 +27,9 @@ NODE_ENV=development
 
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:5173
+
+# Feature Flags
+# Set to 'true' to enable features, 'false' to disable
+# Features are always enabled in development mode
+ENABLE_ADVANCED_SEARCH=false
+ENABLE_INTELLIGENT_WORKFLOW=false
