--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.1",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "downshift": "^9.0.10",
     "framer-motion": "^10.18.0",
     "qs": "^6.13.0",
     "react": "^18.2.0",
